[package]
version = "0.1.0"
name = "dotawasm"
repository = "https://github.com/seed-rs/seed-quickstart"
authors = ["Yinchu Xia <larry.fantasy@gmail.com>"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies]
seed = "0.7.0"
serde_json = "1.0.57"
serde = "1.0.116"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
